# Novelty

./: .gitignore  DEVELOPING.md  biome.json  eslint.config.js  gunicorn.conf.py  manage.py  package-lock.json  package.json  pyproject.toml  readme.MD  requirements.txt  tsconfig.app.json  update_export.py  vite.config.ts
artifacts/: authors_database.csv  genres_avg.csv  world_regions_dict.csv
goodreads/: .gitignore  __init__.py  admin.py  asgi.py  celery.py  dash_list.py  google_answer.py  models.py  settings.py  tables.py  urls.py  views.py  wsgi.py
goodreads/Graphs/adomzy/: sample_export_adomzy.csv  sample_export_adomzy_appended.csv
goodreads/Graphs/john/: sample_export_john_appended.csv
goodreads/Graphs/tom/: sample_export_tom_appended.csv
goodreads/dash/: dash_list.py  dropdowns.py
goodreads/management/commands/: fix.py  rerun_plots.py  scrape_missing.py  sync_csv_with_database.py
goodreads/migrations/: 0001_initial.py  0002_alter_exportdata_id.py  0002_auto_20211017_0422.py  0002_exportdata_user.py  0003_alter_exportdata_options.py  0003_authors.py  0003_spotify.py  0004_auto_20210922_0305_squashed_0010_exportdata_ts_updated.py  0004_auto_20220403_0604.py  0004_spotifytracks_genre_chosen.py  0005_auto_20211016_2009.py  0005_auto_20220507_1934.py  0005_auto_20230228_2036.py  0006_auto_20220714_0513.py  0006_netflixactors_netflixgenres_netflixtitles_netflixusers.py  0007_auto_20220806_0751.py  0007_auto_20221002_1836.py  0007_netflixtitles_title_type.py  0008_auto_20230608_0245.py  0009_spotifyartist.py  0010_auto_20230722_0147.py  0011_alter_netflixtitles_default_image.py  0012_lists.py  0013_auto_20240724_1904.py  0014_remove_bookslists_unique_book_list_and_more.py  0014_userlists_constraint.py
goodreads/plotting/: plotting.py
goodreads/scripts/: analyze.py  append_to_export.py  authors_database.csv  google_answer.py  new_authors_data.csv  prepare_list.py  runner.R  sample_export.csv  sample_export_appended.csv  scrape_article.py  scrape_goodreads.py  scrape_nulls.py  sync_csv_with_database.py  test_functions.py  utils.R  wikipedia.py
goodreads/static/css/: landing.css
goodreads/templates/: comments.html
goodreads/templates/geography/: basefile_geography.html  gallery.html  geography.html
goodreads/templates/goodreads/: about_this.html  base2.html  basefile.html  basefile_music.html  books_home.html  books_view_data.html  csv_upload.html  explore_data.html  faq.html  finish_plot.html  gallery.html  geography.html  home.html  lists.html  music_home.html  nationality_map.html  plots.html  run.html  (+4 more)
goodreads_history/: asgi.py  settings.py  urls.py  wsgi.py
netflix/: data_munge.py
netflix/dash/: bacon_interactive.py
netflix/plotting/: compare.py  plotting.py
netflix/scripts/: pop_tables.py  reformat_long.py  treat_kaggle.py
scripts/: analyze_logs.py  fix_date_all.py  make_authors_db.py  manually_add_export.py  run_production.sh  scrape_goodreads.py  sync_csv_with_database.py  title_author_sync.py  update_galleries.sh  wikipedia.py
spotify/: data_engineering.py
spotify/plotting/: plotting.py  utils.py
spotify/scripts/: write.py
static/ben/: sample_export_appended.csv
tests/: test_urls.py
theme/static_src/: package-lock.json
theme/templates/: base.html
users/: forms.py  urls.py  views.py
(+80 files in other folders)
