[project]
name = "novelty"
version = "0.1.0"
description = "Web application for analyzing and visualizing data about books, music, streaming and more"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amqp==5.1.1",
    "arrow==1.1.1",
    "asgiref==3.6.0",
    "async-timeout==4.0.2",
    "attrs==21.4.0",
    "beautifulsoup4==4.9.3",
    "billiard==4.2.1",
    "binaryornot==0.4.4",
    "bokeh==2.4.2",
    "celery==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.15.1",
    "channels==4.0.0",
    "chardet==4.0.0",
    "charset-normalizer==2.0.4",
    "click==8.1.2",
    "click-didyoumean==0.3.0",
    "click-plugins==1.1.1",
    "click-repl==0.2.0",
    "cligj==0.7.2",
    "contourpy==1.0.7",
    "cookiecutter==2.6.0",
    "crispy-bootstrap4==2024.1",
    "cryptography==44.0.3",
    "cycler==0.11.0",
    "dash==2.18.2",
    "dash-bootstrap-components==1.6.0",
    "dash-core-components==2.0.0",
    "dash-html-components==2.0.0",
    "dash-table==5.0.0",
    "defusedxml==0.7.1",
    "descartes==1.1.0",
    "dill==0.3.4",
    "dj-database-url==0.5.0",
    "django==4.2.21",
    "django-adaptors==0.2.5",
    "django-allauth==64.0.0",
    "django-crispy-forms==2.3",
    "django-extensions==3.1.3",
    "django-plotly-dash==2.4.6",
    "django-tailwind==3.9.1",
    "dpd-components==0.1.0",
    "fiona==1.10.1",
    "flask==2.2.3",
    "fonttools==4.57.0",
    "gender-guesser==0.4.0",
    "geopandas==0.14.4",
    "greenlet==3.2.1",
    "gunicorn==23.0.0",
    "idna==3.10",
    "importlib-metadata==6.0.0",
    "importlib-resources==5.12.0",
    "iniconfig==1.1.1",
    "itsdangerous==2.1.2",
    "jinja2==3.0.1",
    "jinja2-time==0.2.0",
    "joblib==1.5.0",
    "js2py==0.74",
    "kaleido==0.2.1",
    "kiwisolver==1.4.2",
    "kombu==5.5.3",
    "markupsafe==2.1.2",
    "matplotlib==3.10.1",
    "mizani==0.8.1",
    "munch==2.5.0",
    "networkx==3.0",
    "numpy==1.26.4",
    "oauthlib==3.2.2",
    "packaging==21.3",
    "palettable==3.3.0",
    "pandas==1.5.3",
    "patchworklib==0.4.2",
    "patsy==1.0.1",
    "pillow==9.1.0",
    "plotly==5.13.1",
    "plotnine==0.10.1",
    "pluggy==1.0.0",
    "poyo==0.5.0",
    "prompt-toolkit==3.0.29",
    "psycopg2-binary==2.9.10",
    "py==1.11.0",
    "pycparser==2.21",
    "pyjsparser==2.7.1",
    "pyjwt==2.7.0",
    "pyparsing==3.0.6",
    "pyproj==3.7.1",
    "pyrserve==0.9.2",
    "pytest==6.2.5",
    "python-dateutil==2.8.2",
    "python-dotenv~=1.1.0",
    "python-slugify==5.0.2",
    "python3-openid==3.2.0",
    "pytz==2022.1",
    "pyyaml==6.0.2",
    "redis==4.6.0",
    "requests==2.32.3",
    "requests-oauthlib==1.3.1",
    "rich==14.0.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "seaborn==0.12.2",
    "shapely==2.1.0",
    "six==1.16.0",
    "soupsieve==2.2.1",
    "spotipy==2.25.1",
    "sqlalchemy==1.4.27",
    "sqlparse==0.5.3",
    "statsmodels==0.14.4",
    "tenacity==8.0.1",
    "text-unidecode==1.3",
    "threadpoolctl==3.1.0",
    "toml==0.10.2",
    "tornado==6.4.2",
    "typing-extensions==4.2.0",
    "tzlocal==5.2",
    "urllib3==1.26.20",
    "vine==5.1.0",
    "wcwidth==0.2.5",
    "werkzeug==2.2.3",
    "whitenoise==6.4.0",
    "zipp==3.21.0",
]
